--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
   <h1>My Goals</h1>
   <ul>
       <li *ngFor='let goal of goals'>
@@ -6,5 +6,6 @@
       </li>
   </ul>
   <p *ngIf='goals.length > 5'>Your goals are too many</p>
-</div> 
-<app-goal></app-goal>
+</div>  -->
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
